--- a/history/chatbot/templates/xxx.html
+++ b/history/chatbot/templates/xxx.html
@@ -8,17 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Noto Sans Tagalog', sans-serif !important;
         }
         #chat-box {
             position: absolute;
-            top: 50%;
+            /* top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); */
             bottom: 20px;
             right: 20px;
             font-size: 16px;
@@ -80,7 +76,6 @@
     </style>
 </head>
 <body>
-    <h1 style="text-align: center; margin-top: 200px">Intelligent Web Chatbot</h1>
     <div id="chat-box">
         <button id="chat-toggle"><i class="fas fa-comments"></i></button>
         <div id="chat-content">
